<resources>
    <string name="app_name">龙猫天气</string>
    <string name="finish_prompt">再按一次退出</string>
    <string name="loadFail">加载失败</string>
    <string name="unKnow">未知</string>
    <string name="noNet">没有网</string>
    <string name="loadSuccess">成功加载了最新天气</string>
    <string name="cityManage">城市管理</string>
    <string name="locationAgain">重新定位</string>
    <string name="nightMode">夜间模式</string>
    <string name="dayMode">日间模式</string>
    <string name="about">关于龙猫音乐</string>
    <string name="share">分享</string>
    <string name="shareApp">我正在使用简洁易用的龙猫天气，得知今天@°。快来和我一起使用吧。http://fir.im/TotoroWeather</string>
    <string name="quit">退出</string>
    <string name="askQuit">确定要退出龙猫天气吗?</string>
    <string name="unKnowCity">查无此地</string>
    <string name="searchHint">查询你关心的城市</string>
    <string name="currentCity">当前显示</string>
    <string name="deleteCity">删除城市</string>
    <string name="deleteCityMessage">确定要删除@吗?</string>
    <string name="cannotDelete">所在地城市不可删除</string>
    <string name="isNightMode">IsNightMode</string>
    <string name="localCityId">LocalCityId</string>
    <string name="currentCityId">CurrentCityId</string>
    <string name="allCities">AllCities</string>
</resources>
