<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/city_manage"
        android:icon="@mipmap/ic_menu_setting"
        android:title="@string/cityManage" />
    <item
        android:id="@+id/location_again"
        android:icon="@mipmap/ic_menu_location"
        android:title="@string/locationAgain" />

    <item
        android:id="@+id/night_mode"
        android:icon="@mipmap/ic_menu_night"
        android:title="@string/nightMode" />
    <item
        android:id="@+id/share"
        android:icon="@mipmap/ic_menu_share"
        android:title="@string/share" />
    <item
        android:id="@+id/quit"
        android:icon="@mipmap/ic_menu_exit"
        android:title="@string/quit" />
</menu>